--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "assemblyai": "^4.22.1",
     "autoprefixer": "^10.4.23",
     "bcryptjs": "^3.0.3",
-    "better-auth": "^1.4.7",
+    "better-auth": "1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
