--- a/components.json
+++ b/components.json
@@ -19,6 +19,9 @@
     "hooks": "@/hooks"
   },
   "registries": {
-    "@kokonutui": "https://kokonutui.com/r/{name}.json"
+    "@kokonutui": "https://kokonutui.com/r/{name}.json",
+    "@ai-elements": "https://registry.ai-sdk.dev/{name}.json",
+    "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
+    "@formcn": "https://formcn.dev/r/{name}.json"
   }
 }
