--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "reinstall": "pnpm clean:all",
     "fresh": "pnpm clean && pnpm dev",
     "fresh:build": "pnpm clean && pnpm build",
-    
     "db:setup": "tsx scripts/setup-database.ts",
     "db:create-tables": "tsx scripts/create-pte-tables.ts",
     "db:seed": "tsx lib/db/seed.ts",
@@ -38,7 +37,6 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:drop": "drizzle-kit drop",
-    
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
@@ -46,23 +44,21 @@
     "check": "turbo run test lint build",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    
     "deploy:check": "tsx scripts/pre-deploy-check.ts",
     "deploy:test": "tsx scripts/test-apis.ts",
     "deploy:vercel": "pnpm deploy:check && vercel --prod",
     "deploy:setup": "pnpm db:create-tables && pnpm db:seed:pte",
-    
     "postbuild": "echo '✅ Build completed successfully!'",
     "postinstall": "echo '✅ Dependencies installed successfully!'"
   },
   "dependencies": {
-    "@ai-sdk/assemblyai": "^1.0.22",
-    "@ai-sdk/google": "^3.0.0",
-    "@ai-sdk/groq": "^3.0.0",
-    "@ai-sdk/openai": "^3.0.0",
-    "@ai-sdk/react": "^2.0.118",
+    "@ai-sdk/assemblyai": "^1.0.23",
+    "@ai-sdk/google": "^3.0.2",
+    "@ai-sdk/groq": "^3.0.2",
+    "@ai-sdk/openai": "^3.0.2",
+    "@ai-sdk/react": "^2.0.119",
     "@neondatabase/serverless": "^1.0.2",
-    "@next/third-parties": "^16.1.0",
+    "@next/third-parties": "^16.1.1",
     "@polar-sh/better-auth": "^1.6.3",
     "@polar-sh/nextjs": "^0.9.3",
     "@polar-sh/sdk": "^0.42.1",
@@ -86,14 +82,14 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@rollbar/react": "^1.0.0",
-    "@tabler/icons-react": "^3.36.0",
-    "@upstash/redis": "^1.35.8",
+    "@tabler/icons-react": "^3.36.1",
+    "@upstash/redis": "^1.36.0",
     "@vercel/blob": "^2.0.0",
-    "ai": "^6.0.3",
+    "ai": "^6.0.6",
     "assemblyai": "^4.22.1",
     "autoprefixer": "^10.4.23",
     "bcryptjs": "^3.0.3",
-    "better-auth": "1.4",
+    "better-auth": "~1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -110,7 +106,7 @@
     "nanoid": "^5.1.6",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
-    "nuqs": "^2.8.5",
+    "nuqs": "^2.8.6",
     "postcss": "^8.5.6",
     "prettier-plugin-tailwindcss": "^0.7.2",
     "react": "19.2.3",
@@ -127,14 +123,14 @@
     "use-stick-to-bottom": "^1.1.1",
     "uuid": "^13.0.0",
     "workflow": "4.0.1-beta.35",
-    "zod": "^4.2.1",
+    "zod": "^4.3.4",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
     "@eslint/js": "^9.39.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "@next/bundle-analyzer": "^16.1.0",
+    "@next/bundle-analyzer": "^16.1.1",
     "@tailwindcss/postcss": "4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -159,7 +155,7 @@
     "tsx": "^4.21.0",
     "turbo": "^2.7.2",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.50.0",
+    "typescript-eslint": "^8.51.0",
     "vitest": "^4.0.16"
   }
 }
